* class.c (build_vtbl_initializer): Add cast. 	(add_vcall_offset_vtbl_entries_1): 	Use TARGET_VTABLE_DATA_ENTRY_DISTANCE for offset.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57659 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-30  Steve Ellcey  <sje@cup.hp.com>
+
+	* class.c (build_vtbl_initializer): Add cast.
+	(add_vcall_offset_vtbl_entries_1):
+	Use TARGET_VTABLE_DATA_ENTRY_DISTANCE for offset.
+
 2002-09-30  Mark Mitchell  <mark@codesourcery.com>
 
 	* class.c (walk_subobject_offsets): Correct the calculation of
