--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-30  Nick Clifton  <nickc@redhat.com>
+
+	* Makefile.in (BINUTILS_SUPPORT_DIRS): Add cpu directory.
+
 2002-09-30  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* configure.in (s390*-*-linux*): Enable libgcj.
