--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-01  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gcc.c-torture/compile/20020923-1.c: New test.
+
 2002-09-30  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* gcc.c-torture/execute/ffs-1.c: New test.
