--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-30  Andrew Haley  <aph@redhat.com>
+
+	* flow.c (insn_dead_p): When using non-call-exceptions, don't 
+	eliminate insns that may trap.
+	* cse.c (insn_live_p): Likewise.
+
 2002-10-01  Richard Sandiford  <rsandifo@redhat.com>
 
 	* config/mips/mips.h (PROCESSOR_R4121): Rename to PROCESSOR_R4120.
