--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-01  Jim Wilson  <wilson@redhat.com>
+
+	* config/v850/v850.h (EPILOGUE_USES): Define.
+
 2002-09-30  Andrew Haley  <aph@redhat.com>
 
 	* flow.c (insn_dead_p): When using non-call-exceptions, don't 
