* include/ffi.h.in: Fix i386 win32 compilation.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57691 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-01  Bo Thorsen  <bo@smetana.suse.de>
+
+	* include/ffi.h.in: Fix i386 win32 compilation.
+
 2002-09-30  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* configure.in: Add s390x-*-linux-* target.
