--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-01  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* gcc.c (cc1_options): Add space on -auxbase-strip.
+
 2002-10-01  Jim Wilson  <wilson@redhat.com>
 
 	* config/v850/v850.h (EPILOGUE_USES): Define.
