--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-01  Mark Mitchell  <mark@codesourcery.com>
+
+	* g++.dg/tls/init-2.C: Tweak error messages.
+
 2002-10-01  Richard Sandiford  <rsandifo@redhat.com>
 
 	* gcc.c-torture/compile/20020923-1.c: New test.
