* decl.c (cp_finish_decl): Correct check for dynamic 	initialization of thread-local storage.
	* g++.dg/tls/init-2.C: Tweak error messages.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57696 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-01  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl.c (cp_finish_decl): Correct check for dynamic
+	initialization of thread-local storage.
+
 2002-09-30  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* tree.c (really_overloaded_fn): TEMPLATE_ID_EXPRs are also
