--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2002-10-01  Mark Mitchell  <mark@codesourcery.com>
 
+	* gcc.dg/empty1.C: New test.
+
 	* g++.dg/tls/init-2.C: Tweak error messages.
 
 2002-10-01  Richard Sandiford  <rsandifo@redhat.com>
