jcf-dump.c (print_constant, [...]): Don't fall foul of type-based aliasing.
	* jcf-dump.c (print_constant, case CONSTANT_float): Don't fall
	foul of type-based aliasing.

From-SVN: r57699

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-01  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* jcf-dump.c (print_constant, case CONSTANT_float): Don't fall
+	foul of type-based aliasing.
+
 2002-09-30  Anthony Green  <green@redhat.com>
 
 	* gcj.texi (Invoking jv-scan): Fix texinfo.
