--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-01  Nick Clifton  <nickc@redhat.com>
+
+	* config/rs6000/spe.md (spe_evrlwi): Add missing third operand
+	to assembler template.
+
 2002-10-01  Richard Henderson  <rth@redhat.com>
 
 	* dwarf2out.c (loc_descriptor_from_tree): Relax requirement
