* calls.c (precompute_register_parameters): Force non-legitimate         constants into pseudos. 	* gcc.dg/tls/opt-3.c: New.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57709 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-01  Richard Henderson  <rth@redhat.com>
+
+	* calls.c (precompute_register_parameters): Force non-legitimate
+	constants into pseudos.
+
 2002-10-01  Nick Clifton  <nickc@redhat.com>
 
 	* config/rs6000/spe.md (spe_evrlwi): Add missing third operand
