* gcc.dg/empty1.C: Fix typo.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57710 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-01  Mark Mitchell  <mark@codesourcery.com>
+
+	* gcc.dg/empty1.C: Fix typo.
+
 2002-10-01  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* gcc.dg/alias-1.c: New test.
