--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-01  Phil Edwards  <pme@gcc.gnu.org>
+
+	PR libstdc++/8096
+	* include/bits/stl_deque.h (deque::_M_range_check):  Throw
+	out_of_range, not range_error.
+
 2002-09-28  Paolo Carlini  <pcarlini@unitus.it>
 
 	* include/bits/locale_facets.tcc (num_put::_M_widen_int):
