--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,9 +1,17 @@
+2002-10-01  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl.c (cp_finish_decl): Make sure array types are laid out,
+	even if the array bounds are unknown.
+
 2002-10-01  Steve Ellcey  <sje@cup.hp.com>
 
-	* cp/class.c (build_vtbl_initializer): Change build_c_cast
+	* class.c (build_vtbl_initializer): Change build_c_cast
 	to build1.
 
 2002-10-01  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl.c (cp_finish_decl): Make sure array types are laid out,
+	even if the array bounds are unknown.
 
 	* decl.c (cp_finish_decl): Correct check for dynamic
 	initialization of thread-local storage.
