* unroll.c (loop_iterations): Revert 2002-09-08 change.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57720 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-01  Roger Sayle  <roger@eyesopen.com>
+
+	* unroll.c (loop_iterations): Revert 2002-09-08 change.
+
 2002-10-01  Richard Henderson  <rth@redhat.com>
 
 	* real.c (real_to_decimal): Crop trailing zeros for DIGITS < 0.
