--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,10 @@
 2002-10-01  David S. Miller  <davem@redhat.com>
+
+	PR middle-end/7151
+	* config/sparc/sparc.md (movdi_insn_sp32_v9): Accept 'e' regs.
+	(movdi reg/reg split): Match only on sparc32, and v9 when int regs.
+	
+2002-10-01  David S. Miller  <davem@redhat.com>
 	    Jan Hubicka <jh@suse.cz>
 	
 	* reload1.c (gen_reload:SECONDARY_MEMORY_NEEDED): Handle SUBREG.
