* src/x86/ffi64.c (ffi_prep_cif_machdep): Remove debug output.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57726 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-02  Andreas Jaeger  <aj@suse.de>
+
+	* src/x86/ffi64.c (ffi_prep_cif_machdep): Remove debug output.
+
 2002-10-01  Bo Thorsen  <bo@smetana.suse.de>
 
 	* include/ffi.h.in: Fix i386 win32 compilation.
