--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
-2002-10-02  Nathanael Nerode  <neroden@gcc.gnu.org>
+2002-09-29  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* Makefile.def: Remove order dependency comments.
+	* Makefile.tpl: Add explicit install-install dependencies.
+	* Makefile.in: Regenerate.
 
 	* Makefile.tpl: Remove material now in src-release.  (Finally!)
+	* Makefile.in: Regenerate.
 
 	* Makefile.tpl: Add configure-target (for src-release in src)
 	* Makefile.in: Regenerate.
