--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-02  Zack Weinberg  <zack@codesourcery.com>
+
+	* MAINTAINERS: Add myself and Nathan Sidwell
+	<nathan@codesourcery.com> as VxWorks maintainers.
+
 2002-10-02  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	* Makefile.def: Remove order dependency comments.
@@ -101,7 +106,7 @@
 2002-08-21  Paolo Carlini  <pcarlini@unitus.it>
 
 	* MAINTAINERS (Write After Approval): Remove myself.
-        (Various Maintainers: c++ runtime libs): Add myself.
+	(Various Maintainers: c++ runtime libs): Add myself.
 
 2002-08-20  Loren J. Rittle <ljrittle@acm.org>
 
