--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Thu Sep  5 00:34:33 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* gcc.c-torture/execute/loop-14.c: New test.
+
 2002-09-27  Zack Weinberg  <zack@codesourcery.com>
 
 	* gcc.dg/cpp/20020927-1.c: New.
