--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-02  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* Makefile.tpl: Eliminate reference to all-gui, all-libproc.
+	* Makefile.in: Regenerate.
+
 2002-10-02  Zack Weinberg  <zack@codesourcery.com>
 
 	* MAINTAINERS: Add myself and Nathan Sidwell
