--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-02  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* doc/vms.texi: Blow away false include file section.
+
 2002-10-02  Roger Sayle  <roger@eyesopen.com>
 
 	PR optimization/6627
