--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-02  Janis Johnson  <janis187@us.ibm.com>
+
+	* MAINTAINERS: Add myself as web pages co-maintainer.
+
 2002-10-02  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	* Makefile.tpl: Eliminate reference to all-gui, all-libproc.
