* java/rmi/activation/ActivationDesc.java, 	java/rmi/activation/ActivationGroupDesc.java, 	java/rmi/activation/ActivationGroupID.java, 	java/rmi/activation/ActivationID.java: New versions from 	Classpath.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57752 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,11 @@
+2002-10-02  Tom Tromey  <tromey@redhat.com>
+
+	* java/rmi/activation/ActivationDesc.java,
+	java/rmi/activation/ActivationGroupDesc.java,
+	java/rmi/activation/ActivationGroupID.java,
+	java/rmi/activation/ActivationID.java: New versions from
+	Classpath.
+
 2002-09-30  Bo Thorsen  <bo@suse.de>
 
 	* sysdep/x86-64/locks.h (compare_and_swap): Fix multilib support.
