* pa-linux.h (FUNCTION_OK_FOR_SIBCALL): Delete macro. 	* pa32-linux.h (FUNCTION_OK_FOR_SIBCALL): Define.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57758 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-02  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* pa-linux.h (FUNCTION_OK_FOR_SIBCALL): Delete macro.
+	* pa32-linux.h (FUNCTION_OK_FOR_SIBCALL): Define.
+
 2002-10-02  Richard Henderson  <rth@redhat.com>
 
 	PR opt/7124
