--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2002-10-02  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/7188.
+	* init.c (expand_member_init): Allow a FIELD_DECL to be passed in
+	directly.
+	* pt.c (tsubst_initializer_list): Use expand_member_init.
+
 2002-09-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* decl.c (start_cleanup_fn): Clear interface_only before
